Small fix for ack button text wrapping

--- a/File-decryption/webapp/style.css
+++ b/File-decryption/webapp/style.css
@@ -168,7 +168,7 @@ footer button {
     font-size: rem;
     margin: 0.5rem;
     text-align: center;
-    min-width: 6rem;
+    min-width: 7rem;
 }
 
 footer button:hover{
